Fixed tags image not showing bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -323,7 +323,7 @@ ul li a {
 }
 
 .tags-background {
-	background-image: url("..\\images\\Tags.png");
+	background-image: url("..\\images\\tags.png");
 }
 
 .check-background {
